--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
-			<div class="container-fluid">
+		<!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
 				<div class="logo">
 					<img src="images/logo.jpg" alt="No More Victims Safe House Logo">
 				</div>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				  </button>
 
 			  <div
 				class="collapse navbar-collapse d-flex justify-content-end"
@@ -41,9 +37,8 @@
 				  <a  href="#contact" title="Contact">Contact</a>
 				</div>
 			  </div>
-			</div>
-		  </nav>
-		<!-- <div class="logo">
+		  </nav> -->
+		<div class="logo">
 			<img src="images/logo.jpg" alt="No More Victims Safe House Logo">
 		</div>
 		<h1>No More Victims Safe House</h1>
@@ -52,7 +47,7 @@
 			<a href="#">About</a>
 			<a href="#">Gallery</a>
 			<a href="#">Contact</a>
-		</nav> -->
+		</nav>
 	</header>
 	<main>
 		<section id="about">
