updated nav links

--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
 		</div>
 		<h1>No More Victims Safe House</h1>
 		<nav>
-			<a href="#">Home</a>
-			<a href="#">About</a>
-			<a href="#">Gallery</a>
-			<a href="#">Contact</a>
+			<a  aria-current="page" href="/" title="Home"
+					>Home</a
+				  >
+				  <a  href="#about" title="About"
+					>About</a
+				  >
+				  <a  href="#gallery" title="Gallery">Gallery</a>
+				  <a  href="#contact" title="Contact">Contact</a>
 		</nav>
 	</header>
 	<main>
